--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "dotenv": "^16.1.4",
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.1",
     "gsap-trial": "^3.11.4",
+    "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "next": "^13.2.4",
     "querystring-es3": "^0.2.1",
@@ -24,7 +26,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
-    "react-leaflet": "^4.2.0",
     "react-loaders": "^3.0.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-router-dom": "^6.8.1",
