--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "dotenv": "^16.1.4",
+    "env": "^0.0.2",
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.1",
     "gsap-trial": "^3.11.4",
