--- a/package.json
+++ b/package.json
@@ -9,28 +9,27 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-icons/all-files": "^4.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "balanced-match": "^2.0.0",
     "dotenv": "^16.1.4",
     "env": "^0.0.2",
     "firebase": "^9.17.1",
-    "framer-motion": "^10.0.1",
+    "framer-motion": "^4.1.17",
     "gsap-trial": "^3.11.4",
     "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "next": "^13.2.4",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
     "react-loaders": "^3.0.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-spring": "^9.7.1",
     "react-typewriter": "^0.4.1",
@@ -41,7 +40,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
